# ChangeLog for sys-libs/timezone-data
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.240 2010/11/09 13:48:09 vapier Exp $

*timezone-data-2010o (09 Nov 2010)

  09 Nov 2010; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2010o.ebuild:
  Version bump #343719 by Rodrigo Severo.

*timezone-data-2010n (26 Oct 2010)

  26 Oct 2010; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2010n.ebuild:
  Version bump #342627 by Rodrigo Severo.

*timezone-data-2010m (27 Sep 2010)

  27 Sep 2010; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2010m.ebuild:
  Version bump #338932 by Rodrigo Severo.

  27 Sep 2010; Mike Frysinger <vapier@gentoo.org>
  timezone-data-2010l.ebuild:
  Stabilize for everyone.

*timezone-data-2010l (16 Aug 2010)

  16 Aug 2010; Mike Frysinger <vapier@gentoo.org> +timezone-data-2010l.ebuild:
  Version bump #332995 by Rodrigo Severo.

*timezone-data-2010k (26 Jul 2010)

  26 Jul 2010; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2010k.ebuild:
  Version bump #329917 by Rodrigo Severo.

  26 Jul 2010; Mike Frysinger <vapier@gentoo.org> timezone-data-2010j.ebuild:
  Stabilize for everyone.

*timezone-data-2010j (10 May 2010)

  10 May 2010; Mike Frysinger <vapier@gentoo.org> +timezone-data-2010j.ebuild:
  Version bump #319145 by Rodrigo Severo.

  10 May 2010; Mike Frysinger <vapier@gentoo.org> timezone-data-2010i.ebuild:
  Stabilize for everyone #319169 by Arfrever Frehtes Taifersar Arahesis.

*timezone-data-2010i (19 Apr 2010)

  19 Apr 2010; Mike Frysinger <vapier@gentoo.org> +timezone-data-2010i.ebuild:
  Version bump #316103 by Rodrigo Severo.

*timezone-data-2010h (07 Apr 2010)

  07 Apr 2010; Mike Frysinger <vapier@gentoo.org> +timezone-data-2010h.ebuild:
  Version bump #313235 by Rodrigo Severo.

*timezone-data-2010g (29 Mar 2010)

  29 Mar 2010; Mike Frysinger <vapier@gentoo.org> +timezone-data-2010g.ebuild: