@@ -1,9 +1,9 @@
 AUX timezone-data-2008h-makefile.patch 4037 RMD160 b7b9926ccee050dd18f2c33f2654a0b6dc4d35e0 SHA1 281539ae7f6fd804fc1e7ec9533552fa7fd50d88 SHA256 fc496b869ed6b70c60b0fcdea0a176e31c9405c96e6bf73b5edc26339de66c39
-DIST tzcode2010l.tar.gz 192046 RMD160 2fa4dc6de8b728033cad088e71cb5e7a909729e7 SHA1 c5957ab9cd82f5c2acfec941cc65cf1d61ef62a8 SHA256 489876779f75f1c7659d26c09c3bcce62188b60eeb3981e0e3cd1f7669808ccc
 DIST tzcode2010n.tar.gz 192605 RMD160 27a4c430a12f1c58054d64b32bb8cb5091eef3a9 SHA1 403eff4d9875fb97d73a4d624caa127125f6e1f0 SHA256 f2810d87764f142c762b6d5ec3cb9621c981503c041246a1f6f3c24fd5ef131a
-DIST tzdata2010l.tar.gz 191467 RMD160 da2477896c92a57d6bb93f3dea6febaf63d6e8d1 SHA1 cdf10096260437556c3b7151790ec0db13d3d908 SHA256 bae7b4a8364f7ab3d6d644eb6075de1e9a0c72fb3fb5843fc217d2ff57408577
+DIST tzcode2011a.tar.gz 193478 RMD160 1cac5d1d12c328ea4848830d296a72ad39e9c9ff SHA1 a7b09c47e04013f28235158d6e04db0e9ac84255 SHA256 65a82a9411f3c085bcd3a4f195709717d3efbca36d9f726afaa3d3155fa34c44
 DIST tzdata2010o.tar.gz 191722 RMD160 8c6aaa2f2ff080d4d371b95e46b3a5a4dbc0412c SHA1 bf1541379d987e99ea1941a32ff629f14b1b142c SHA256 cd0f3799688b3b870cd988505e47c2975b1808e73ec0677bc9db4b705b534c07
-EBUILD timezone-data-2010l.ebuild 3097 RMD160 08dd1dd1f829b7fee2bd9df302bd3f36ae3b1bd6 SHA1 247c16b432d88fa6a553a15968b089710dac808f SHA256 d1267321bd0abfd9e3e3a441529c8e49c1b03a14ceb25587c292c6317cfdc963
-EBUILD timezone-data-2010o.ebuild 3100 RMD160 118723e1801a624b7933b59cc396a073648594ff SHA1 95fc9853884abcf9059c469f55019ac2c583c1fe SHA256 719408f9595f0713dd1ec9bc7e764d70b62e45ea7dc14532a625c86aaa6251ef
-MISC ChangeLog 30964 RMD160 da7f7f6a5ded6239be58250a171d5d1d986169a0 SHA1 c761a82bac50daeb9ba87208ad21facfcb42499a SHA256 5160efe3badee05a8be4fa63c03732f7f9c565729fdcf0c4e833ae6661119020
+DIST tzdata2011a.tar.gz 192593 RMD160 636ddcaa2ededce5e01120e7905bd468aa8cfbcc SHA1 5b43a87750c396ce85eae95914a3b1a1458a94ca SHA256 782c691b4750bdefeb84063128db685a8b8f31dc2efb887ee841ae105bfa747b
+EBUILD timezone-data-2010o.ebuild 3100 RMD160 d368221245989c40bfabed678ef34f0302c2fc28 SHA1 580d89387408fbb84a0e28ac0d6999f6d64ff1e2 SHA256 f5a60333c3a85b672a63be5b816f9d89deb4e7991fe9a54db7102df7a22667f3
+EBUILD timezone-data-2011a.ebuild 3097 RMD160 baced529d21fa65a00910decddf38dc38c702f9c SHA1 c946deed23d77e1bceca5d20c849a2de93451e8c SHA256 4088199b478e8564176486cb4e02c81b6a1794178b68b80a9b12ea55f19bdd34
+MISC ChangeLog 31229 RMD160 a63902399c4c68525182d3df0f3f368f78367f10 SHA1 0a654094c86225e26feea23092a31b9afa00e3ff SHA256 c3c6ce96c186458740c1c57a9ffe5226338a29737475183bcfe7c790e37c384b
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
