@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/timezone-data-2010o.ebuild,v 1.1 2010/11/09 13:48:09 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/timezone-data-2010o.ebuild,v 1.2 2011/01/08 20:49:08 vapier Exp $
 
 inherit eutils toolchain-funcs flag-o-matic
 
